--- a/app/less/wave.less
+++ b/app/less/wave.less
@@ -19,7 +19,8 @@
   align-items: center;
   border-radius: 50%;
   box-shadow: 10px 10px 30px rgba(62, 62, 62, 0.76), -12px -10px 45px #ffffff;
-  transition: all .5s;
+  transition: all .9s;
+  z-index: 100;
 
   &::before {
     content: '';
@@ -27,7 +28,7 @@
     inset: 18px;
     border-radius: 50%;
     box-shadow: inset 10px 10px 20px rgba(0, 0, 0, .5), inset -5px -5px 15px #473773;
-    z-index: 10;
+    z-index: 100;
   }
 }
 
@@ -50,20 +51,20 @@
   transform: translateX(-550px);
   animation: linear infinite wave 140s;
   z-index: 10;
+  transition: all 1s;
 
-  &::after {
+  .wave_up {
     content: '';
     width: 100%;
     height: 105px;
     position: absolute;
     bottom: -1px;
     left: -250px;
-    //background: url(../img/dest/wave.webp) center center repeat-x, linear-gradient(#F91407, #F8AF36);
     background: url(../img/dest/wave_up.webp) center center repeat-x;
     background-size: contain;
   }
 
-  &::before {
+  .wave_down {
     content: '';
     width: 100%;
     height: 105px;
@@ -165,7 +166,7 @@
 
   .glass__cardNumber {
     font-family: 'Oswald', sans-serif;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 28px;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -188,4 +189,9 @@
     text-shadow: rgba(255,255,255,0.5) 0px 1px 1px;
     transition: all 1s;
   }
+}
+
+.opacity_wave {
+  transition: opacity 1s;
+  opacity: 0;
 }
