--- a/app/less/main.less
+++ b/app/less/main.less
@@ -9,8 +9,13 @@ html {
   overflow-x: hidden;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  background: rgb(255, 255, 255);
-  background: radial-gradient(ellipse at center, rgba(173, 173, 173, 1.0), rgb(255, 255, 255));
+  //background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  //background-image: linear-gradient(to top, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
+  //background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+  //background-image: linear-gradient(to top, #dad4ec 0%, #dad4ec 1%, #f3e7e9 100%);
+  background-image: linear-gradient(120deg, #f7edff 0%, #8ec5fc 100%);
+  //background: rgb(255, 255, 255);
+  //background: radial-gradient(ellipse at center, rgba(173, 173, 173, 1.0), rgb(255, 255, 255));
 }
 
 body {
