--- a/app/less/wave.less
+++ b/app/less/wave.less
@@ -62,8 +62,8 @@
   width: 650px;
   height: 650px;
   overflow: hidden;
-  //background: #523F84;
-  background: #291455;
+  background: #523F84;
+  //background: #291455;
   display: flex;
   justify-content: center;
   align-items: center;
