--- a/app/less/wave.less
+++ b/app/less/wave.less
@@ -219,6 +219,19 @@
     background-size: contain;
   }
 
+  .glass__chip {
+    position: absolute;
+    top: 100px;
+    left: 5px;
+    width: 100px;
+    height: 45px;
+    background: url(../img/dest/chip.webp) center center no-repeat no-repeat;
+    background-size: contain;
+    display: inline-block;
+    z-index: 120;
+    border-radius: 5px;
+  }
+
   .glass__userName {
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
@@ -243,7 +256,7 @@
     text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 1px;
     transition: all 1s;
     letter-spacing: 2px;
-    margin-bottom: -50px;
+    margin-bottom: -94px;
   }
 
   .glass__bankName {
