--- a/app/less/wave.less
+++ b/app/less/wave.less
@@ -178,7 +178,7 @@
   backdrop-filter: blur(10px);
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, .18);
-  box-shadow: 0 8px 32px rgba(0, 0, 0, .37);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, .37), inset 35px 55px 75px rgba(200,200,200, .1);
   padding: 20px;
   font-family: sans-serif;
   color: #fff;
