animate coins + refresh

--- a/app/less/wave.less
+++ b/app/less/wave.less
@@ -329,10 +329,10 @@
     height: 40px;
   }
   .z-cash1 {
-    right: 20%;
+    right: 17%;
     bottom: 40%;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
   }
   .btc5 {
     right: -2%;
@@ -347,6 +347,7 @@
     width: 150px;
     height: 150px;
     transform: perspective(1200px) rotateY(40deg) rotateX(15deg);
+    filter: blur(1px);
   }
   .eth7 {
     right: -2%;
